--- a/apps/dashboard/package.json
+++ b/apps/dashboard/package.json
@@ -38,7 +38,10 @@
     "file-saver": "^2.0.5",
     "highcharts": "^9.0.1",
     "highcharts-vue": "^1.0.4",
+    "html2canvas": "^1.4.1",
+    "jspdf": "^1.5.3",
     "monaco-editor": "^0.38.0",
+    "pdf-lib": "^1.17.1",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-flow-renderer": "^10.3.12",
