--- a/.github/workflows/staging.yml
+++ b/.github/workflows/staging.yml
@@ -146,6 +146,8 @@ jobs:
     runs-on: ubuntu-latest
     steps:
 
+      - uses: actions/checkout@v2
+      
       # - name: Run testsigma end to end tests
       #   env:
       #       TESTSIGMA_API_KEY: ${{ secrets.TESTSIGMA_API_KEY }}
