--- a/apps/dashboard/web/polaris_web/web/WEB-INF/web.xml
+++ b/apps/dashboard/web/polaris_web/web/WEB-INF/web.xml
@@ -9,6 +9,7 @@
         <session-timeout>60</session-timeout>
         <cookie-config>
             <http-only>true</http-only>
+            <comment>__SAME_SITE_NONE__</comment>
         </cookie-config>
     </session-config>
 
