--- a/.github/workflows/staging.yml
+++ b/.github/workflows/staging.yml
@@ -58,6 +58,7 @@ jobs:
 #      - name: Prepare Dashboard polaris UI
 #        working-directory: ./apps/dashboard/web/polaris_web
 #        run: npm install && export RELEASE_VERSION=${{steps.docker_tag.outputs.IMAGE_TAG}} && npm run build
+      - run: mvn package -Dakto-image-tag=${{ github.event.inputs.Tag }} -Dakto-build-time=$(eval "date +%s") -Dakto-release-version=${{steps.docker_tag.outputs.IMAGE_TAG}}
       - name: Configure AWS Credentials
         if: ${{ github.event.inputs.Environment == 'prod' }}
         uses: aws-actions/configure-aws-credentials@v1
