--- a/.github/workflows/staging.yml
+++ b/.github/workflows/staging.yml
@@ -115,32 +115,34 @@ jobs:
         uses: aws-actions/amazon-ecr-login@v1
         with:
           mask-password: 'true'
+          registry-type: public
 
       - name: Build, tag, and push docker image to Amazon ECR
         env:
           ECR_REGISTRY: ${{ steps.login-ecr.outputs.registry }}
           ECR_REPOSITORY: akto-api-security
+          REGISTRY_ALIAS: p7q3h0z2
           IMAGE_TAG: latest
         run: |
           docker buildx create --use
           # Build a docker container and push it to DockerHub 
           cd apps/dashboard
-          docker build -t $ECR_REGISTRY/$ECR_REPOSITORY-dashboard:$IMAGE_TAG .
+          docker build -t $ECR_REGISTRY/$REGISTRY_ALIAS/$ECR_REPOSITORY-dashboard:$IMAGE_TAG .
           echo "Pushing image to ECR..."
-          docker push $ECR_REGISTRY/$ECR_REPOSITORY-dashboard:$IMAGE_TAG
+          docker push $ECR_REGISTRY/$REGISTRY_ALIAS/$ECR_REPOSITORY-dashboard:$IMAGE_TAG
           echo "::set-output name=image::$ECR_REGISTRY/$ECR_REPOSITORY-dashboard:$IMAGE_TAG"
           cd ../api-runtime
-          docker build -t $ECR_REGISTRY/$ECR_REPOSITORY-runtime:$IMAGE_TAG .
+          docker build -t $ECR_REGISTRY/$REGISTRY_ALIAS/$ECR_REPOSITORY-runtime:$IMAGE_TAG .
           echo "Pushing image to ECR..."
-          docker push $ECR_REGISTRY/$ECR_REPOSITORY-runtime:$IMAGE_TAG
+          docker push $ECR_REGISTRY/$REGISTRY_ALIAS/$ECR_REPOSITORY-runtime:$IMAGE_TAG
           echo "::set-output name=image::$ECR_REGISTRY/$ECR_REPOSITORY-runtime:$IMAGE_TAG"       
           cd ../testing
-          docker buildx build --platform linux/arm64/v8,linux/amd64 -t $ECR_REGISTRY/akto-api-testing:$IMAGE_TAG . --push
+          docker buildx build --platform linux/arm64/v8,linux/amd64 -t $ECR_REGISTRY/$REGISTRY_ALIAS/akto-api-testing:$IMAGE_TAG . --push
           echo "::set-output name=image::$ECR_REGISTRY/akto-api-testing:$IMAGE_TAG"       
           cd ../api-analyser
-          docker build -t $ECR_REGISTRY/akto-api-context-analyzer:$IMAGE_TAG .
+          docker build -t $ECR_REGISTRY/$REGISTRY_ALIAS/akto-api-context-analyzer:$IMAGE_TAG .
           echo "Pushing image to ECR..."
-          docker push $ECR_REGISTRY/akto-api-context-analyzer:$IMAGE_TAG
+          docker push $ECR_REGISTRY/$REGISTRY_ALIAS/akto-api-context-analyzer:$IMAGE_TAG
           echo "::set-output name=image::$ECR_REGISTRY/akto-api-context-analyzer:$IMAGE_TAG"
 
       - name: Set up JDK 11
