Changed aws region

--- a/.github/workflows/staging.yml
+++ b/.github/workflows/staging.yml
@@ -116,6 +116,7 @@ jobs:
         with:
           mask-password: 'true'
           registry-type: public
+          aws-region: us-east-1
 
       - name: Build, tag, and push docker image to Amazon ECR
         env:
