--- a/.github/workflows/staging.yml
+++ b/.github/workflows/staging.yml
@@ -110,6 +110,13 @@ jobs:
 #          docker push $ECR_REGISTRY/akto-api-context-analyzer:$IMAGE_TAG
 #          echo "::set-output name=image::$ECR_REGISTRY/akto-api-context-analyzer:$IMAGE_TAG"
 
+      - name: Configure AWS Credentials for ECR
+        if: ${{ github.event.inputs.Environment == 'prod' }}
+        uses: aws-actions/configure-aws-credentials@v1
+        with:
+          aws-access-key-id: ${{secrets.AWS_ACCESS_KEY_ID_PROD}}
+          aws-secret-access-key: ${{secrets.AWS_SECRET_ACCESS_KEY_PROD}}
+          aws-region: us-east-1
       - name: Login to Amazon ECR
         id: login-ecr
         uses: aws-actions/amazon-ecr-login@v1
