--- a/apps/dashboard/src/main/resources/inbuilt_llm_test_yaml_files/PromptInjectionBasicV2.yml
+++ b/apps/dashboard/src/main/resources/inbuilt_llm_test_yaml_files/PromptInjectionBasicV2.yml
@@ -1,6 +1,6 @@
 id: PROMPT_INJECTION_BASIC_v2
 info:
-  name: "Basic Prompt Injection v2 Test on LLMs"
+  name: "Basic Prompt Injection Test on LLMs: Print Hello"
   description: >
     "Testing LLM for a specific prompt input to guide the output to display a string and
     trigger a vulnerability"
