--- a/apps/dashboard/src/main/resources/inbuilt_llm_test_yaml_files/LLMObfuscation.yml
+++ b/apps/dashboard/src/main/resources/inbuilt_llm_test_yaml_files/LLMObfuscation.yml
@@ -37,6 +37,9 @@ api_selection_filters:
       key:
         regex: .*
         extract: changed_key
+
+# changed_key is URL-encoded
+# URL decoded string : BASE64 encoded string: "SGVsbG9Xb3JsZA=="    BASE64 decoded string:
 execute:
   type: single
   requests:
